Fix profiles being too big in list view

--- a/client/src/Profiles/Profiles.css
+++ b/client/src/Profiles/Profiles.css
@@ -31,6 +31,10 @@ li .profile img {
   width: auto;
 }
 
+li .profile svg {
+  height: 3vh;
+}
+
 .profile span {
   background: black;
   color: #fff;
